# vpa

./: .gitignore  Cargo.toml  ci.sh  flake.nix  matched_parentheses.rs  nix-ci.sh  run-examples.sh
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: call_macro.rs  stopwatch.rs
examples/matched_parentheses/: Cargo.toml  result
examples/matched_parentheses/src/: main.rs  test.rs
examples/matched_parentheses_nondeterministic/src/: main.rs
src/: alphabet.rs  automaton.rs  call.rs  combinators.rs  curry.rs  curry_opt.rs  edge.rs  exec.rs  execution.rs  indices.rs  kind.rs  lib.rs  lookup.rs  merge.rs  quickcheck_impl.rs  range.rs  run.rs  state.rs  subc.rs  test.rs  vpa.rs  wildcard.rs
src/nond/: automaton.rs  edge.rs  mod.rs  state.rs
