[package]
name = "vpa"
description = "Visibly pushdown automata."
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# none

# Optional dependencies:
quickcheck = { version = "1.0.3", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
tokio = { version = "1.33.0", features = ["macros", "rt", "time"] }

[features]
quickcheck = ["dep:quickcheck"]
